# dlb_lip_tool

./: .gitignore  README.md  meson.build  meson_options.txt
dlb_lip_tool/: Readme.txt  meson.build
dlb_lip_tool/include/: dlb_lip_libcec_bus.h  dlb_lip_tool.h  dlb_lip_xml_parser.h
dlb_lip_tool/src/: dlb_lip_libcec_bus.c  dlb_lip_tool.c  dlb_lip_xml_parser.c
dlb_lip_tool/xml_configs/: config_example.xml
dlb_lip_tool/xml_configs/src_avr_tv/: avr.xml  src.xml  tv.xml
dlb_lip_tool/xml_configs/src_tv/: src.xml  tv.xml
dlb_lip_tool/xml_configs/src_tv_avr/: avr.xml  tv_with_avr_arc.xml
dlb_xml/: meson.build
dlb_xml/include/: dlb_xml.h
dlb_xml/src/: dlb_xml.c
subprojects/: dlb_lip.wrap
